--- a/main.html
+++ b/main.html
@@ -24,7 +24,61 @@
 </head>
 
 <body>
-    <h1>We create</h1>
+    <div class="container">
+        <!-- Header -->
+        <header class="header">
+            <a href="#!">
+                <img src="./images/logo.svg" alt="logo">
+            </a>
+            <button type="button" class="header-button">Contacts</button>
+        </header>
+    </div>
+
+    <section class="services">
+        <div class="container">
+            <ul class="services-list">
+                <li class="services-list_item">
+
+                </li>
+                <li class="services-list_item">
+
+                </li>
+                <li class="services-list_item">
+
+                </li>
+                <li class="services-list_item">
+
+                </li>
+                <li class="services-list_item">
+
+                </li>
+                <li class="services-list_item">
+
+                </li>
+                <li class="services-list_item">
+
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <div class="container">
+        <section class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34809.70946387577!2d24.108819099999998!3d56.95553695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfd1742cc3a1%3A0x25408000f2434681!2z0J_QsNC80Y_RgtC90LjQuiDQodCy0L7QsdC-0LTRiw!5e0!3m2!1sru!2slv!4v1679677727689!5m2!1sru!2slv"
+                class="google-map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </section>
+    </div>
+
+    <div class="container">
+        <footer class="footer">
+            <ul class="footer-list">
+                <li class="footer-list-item telephone">Tel: +37127782772</li>
+                <li class="footer-list_-item email">Email: daniel.popchenko@gmail.com</li>
+                <li class="footer-list-item adress">Adress: Kurzemes prospekts, 87-17</li>
+            </ul>
+        </footer>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
