made main block and almost services blocks

--- a/main.html
+++ b/main.html
@@ -24,63 +24,110 @@
 </head>
 
 <body>
-    <div class="container">
-        <!-- Header -->
-        <header class="header">
-            <a href="#!">
-                <img src="./images/logo.svg" alt="logo">
-            </a>
-            <button type="button" class="header-button">Contacts</button>
-        </header>
-    </div>
-
-    <section class="services">
+    <header class="header" id="header">
         <div class="container">
-            <ul class="services-list">
-                <li class="services-list_item">
+            <!-- Header -->
 
-                </li>
-                <li class="services-list_item">
+            <div class="header-content">
+                <a href="./main.html" class="logo"></a>
+                <a href="#footer " class="header-button ">Contacts</a>
+            </div>
 
-                </li>
-                <li class="services-list_item">
+    </header>
+    </div>
 
-                </li>
-                <li class="services-list_item">
+    <main>
+        <section class="services ">
+            <div class="container ">
+                <ul class="services-list ">
+                    <li class="services-list_item ">
+                        <div class="list-item_content ">
+                            <h2 class="list-item_title ">First service</h2>
+                            <a href="./services-pages/first.html " class="list-item_link ">
+                                <img src="./images/image.jpeg " class="list-item_image " alt=" ">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="services-list_item ">
+                        <div class="list-item_content ">
+                            <h2 class="list-item_title ">Second service</h2>
+                            <a href="./services-pages/second.html " class="list-item_link ">
+                                <img src="./images/image02.jpeg " class="list-item_image " alt=" ">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="services-list_item ">
+                        <div class="list-item_content ">
+                            <h2 class="list-item_title ">Third service</h2>
+                            <a href="./services-pages/third.html " class="list-item_link ">
+                                <img src="./images/image.jpeg " class="list-item_image " alt=" ">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="services-list_item ">
+                        <div class="list-item_content ">
+                            <h2 class="list-item_title ">Fourth service</h2>
+                            <a href="./services-pages/fourth.html " class="list-item_link ">
+                                <img src="./images/image02.jpeg " class="list-item_image " alt=" ">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="services-list_item ">
+                        <div class="list-item_content ">
+                            <h2 class="list-item_title ">Fifth service</h2>
+                            <a href="./services-pages/fifth.html " class="list-item_link ">
+                                <img src="./images/image.jpeg " class="list-item_image " alt=" ">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="services-list_item ">
+                        <div class="list-item_content ">
+                            <h2 class="list-item_title ">Sixth service</h2>
+                            <a href="./services-pages/sixth.html " class="list-item_link ">
+                                <img src="./images/image02.jpeg " class="list-item_image " alt=" ">
+                            </a>
+                        </div>
+                    </li>
+                    <li class="services-list_item ">
+                        <div class="list-item_content ">
+                            <h2 class="list-item_title ">Sixth service</h2>
+                            <a href="./services-pages/seventh.html " class="list-item_link ">
+                                <img src="./images/image.jpeg " class="list-item_image " alt=" ">
+                            </a>
+                        </div>
+                    </li>
 
-                </li>
-                <li class="services-list_item">
-
-                </li>
-                <li class="services-list_item">
-
-                </li>
-                <li class="services-list_item">
-
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <div class="container">
-        <section class="map-container">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34809.70946387577!2d24.108819099999998!3d56.95553695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfd1742cc3a1%3A0x25408000f2434681!2z0J_QsNC80Y_RgtC90LjQuiDQodCy0L7QsdC-0LTRiw!5e0!3m2!1sru!2slv!4v1679677727689!5m2!1sru!2slv"
-                class="google-map" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+                </ul>
+            </div>
         </section>
-    </div>
 
-    <div class="container">
-        <footer class="footer">
-            <ul class="footer-list">
-                <li class="footer-list-item telephone">Tel: +37127782772</li>
-                <li class="footer-list_-item email">Email: daniel.popchenko@gmail.com</li>
-                <li class="footer-list-item adress">Adress: Kurzemes prospekts, 87-17</li>
+        <!-- Google map -->
+        <section class="map-container ">
+            <div class="container ">
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d34809.70946387577!2d24.108819099999998!3d56.95553695!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfd1742cc3a1%3A0x25408000f2434681!2z0J_QsNC80Y_RgtC90LjQuiDQodCy0L7QsdC-0LTRiw!5e0!3m2!1sru!2slv!4v1679677727689!5m2!1sru!2slv "
+                    class="google-map " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade ">
+                </iframe>
+
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer" id="footer">
+        <div class="container ">
+            <ul class="footer-list ">
+                <li class="footer-list-item">
+                    <a class="telephone " href="tel:+37127782772 ">Tel: +37127782772</a>
+                </li>
+                <li class="footer-list_-item">
+                    <a class="email " href="mailto:daniel.popchenko@gmail.com ">Email: daniel.popchenko@gmail.com</a>
+                </li>
+                <li class="footer-list-item adress ">Adress: Kurzemes prospekts, 87-17</li>
             </ul>
-        </footer>
+    </footer>
     </div>
 
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js "></script>
 </body>
 
 </html>
