--- a/services-pages/fifth.html
+++ b/services-pages/fifth.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="../css/services-pages.css">
 
 
-    <title>First</title>
+    <title>Fifth</title>
 </head>
 
 <body>
@@ -38,20 +38,26 @@
         </div>
     </header>
 
-
+    <section class="description">
+        <div class="container description-container">
+            <h2 class="description-title">Service - 5</h2>
+            <p class="description-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis.
+            </p>
+        </div>
+    </section>
 
     <section class="services">
         <div class="container">
 
-            <h2 class="title">Here you can see what we can do</h2>
-            <h3>Fifth</h3>
+
 
             <ul class="services-list images-list">
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
@@ -61,7 +67,7 @@
                 </li>
 
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
 
                 <li class="services-list_item no-hover">
