--- a/services-pages/first.html
+++ b/services-pages/first.html
@@ -39,33 +39,41 @@
     </header>
 
 
+    <section class="description">
+        <div class="container description-container">
+            <h2 class="description-title">Service - 1</h2>
+            <p class="description-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis.
+            </p>
+        </div>
+    </section>
+
 
     <section class="services">
         <div class="container">
 
-            <h2 class="title">Here you can see what we can do</h2>
-            <h3>First</h3>
+
 
             <ul class="services-list images-list">
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
                 </li>
+                <li class="services-list_item no-hover">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
+                </li>
+
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
                 </li>
 
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
-                </li>
-
-                <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
 
 
@@ -78,7 +86,7 @@
         <div class="container">
             <div class="controls">
                 <div class="control">
-                    <a class="prev control disable">Previous</a>
+                    <a class="prev disable">Previous</a>
                 </div>
                 <div class="control">
                     <a href='../services-pages/second.html' class="next control ">Next</a>
