--- a/services-pages/second.html
+++ b/services-pages/second.html
@@ -39,29 +39,34 @@
     </header>
 
 
+    <section class="description">
+        <div class="container description-container">
+            <h2 class="description-title">Service - 2</h2>
+            <p class="description-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis.
+            </p>
+        </div>
+    </section>
+
 
     <section class="services">
         <div class="container">
-
-            <h2 class="title">Here you can see what we can do</h2>
-            <h3>Second</h3>
-
             <ul class="services-list images-list">
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
                 </li>
 
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
 
                 <li class="services-list_item no-hover">
