--- a/services-pages/seventh.html
+++ b/services-pages/seventh.html
@@ -38,20 +38,23 @@
         </div>
     </header>
 
-
+    <section class="description">
+        <div class="container description-container">
+            <h2 class="description-title">Service - 7</h2>
+            <p class="description-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis.
+            </p>
+        </div>
+    </section>
 
     <section class="services">
         <div class="container">
-
-            <h2 class="title">Here you can see what we can do</h2>
-            <h3>First</h3>
-
             <ul class="services-list images-list">
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
@@ -65,7 +68,7 @@
                 </li>
 
                 <li class="services-list_item no-hover">
-                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                    <img src="../images/image02.jpeg" class="list-item_image " alt="desert">
                 </li>
 
 
@@ -78,10 +81,10 @@
         <div class="container">
             <div class="controls">
                 <div class="control">
-                    <a href="./sixth.html" class="prev control">Previous</a>
+                    <a href="../services-pages/sixth.html" class="prev control">Previous</a>
                 </div>
                 <div class="control">
-                    <a class="next control disable">Next</a>
+                    <a class="next  disable">Next</a>
                 </div>
             </div>
         </div>
