--- a/services-pages/sixth.html
+++ b/services-pages/sixth.html
@@ -17,17 +17,94 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap" rel="stylesheet" />
 
-    <!-- main.css styles -->
+    <!-- css styles -->
     <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/services-pages.css">
 
-    <title>First</title>
+
+    <title>Sixth</title>
 </head>
 
 <body>
-    <a href="../main.html"><img src="../images/logo.svg" alt=""></a>
-    <h1>First service</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, qui mollitia sapiente corrupti veniam laudantium labore doloribus nemo accusamus aliquid! Corporis quos quis, eum ducimus commodi laborum ad reprehenderit sed!</p>
-    <script src="./js/main.js"></script>
+
+    <header class="header" id="header">
+        <div class="container">
+            <!-- Header -->
+
+            <div class="header-content">
+                <a href="../main.html" class="logo"></a>
+                <a href="../main.html" class="header-button ">Contacts</a>
+            </div>
+        </div>
+    </header>
+
+    <section class="description">
+        <div class="container description-container">
+            <h2 class="description-title">Service - 6</h2>
+            <p class="description-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis.
+            </p>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="container">
+
+
+
+            <ul class="services-list images-list">
+                <li class="services-list_item no-hover">
+                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                </li>
+                <li class="services-list_item no-hover">
+                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                </li>
+                <li class="services-list_item no-hover">
+                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                </li>
+                <li class="services-list_item no-hover">
+                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                </li>
+
+                <li class="services-list_item no-hover">
+                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                </li>
+
+                <li class="services-list_item no-hover">
+                    <img src="../images/image.jpeg" class="list-item_image " alt="desert">
+                </li>
+
+
+            </ul>
+        </div>
+    </section>
+
+
+    <section class="navigation">
+        <div class="container">
+            <div class="controls">
+                <div class="control">
+                    <a href="../services-pages/fifth.html" class="prev control">Previous</a>
+                </div>
+                <div class="control">
+                    <a href='../services-pages/seventh.html' class="next control ">Next</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer" id="footer">
+        <div class="container ">
+            <ul class="footer-list ">
+                <li class="footer-list-item">
+                    <a class="telephone " href="tel:+37127782772 ">Tel: +37127782772</a>
+                </li>
+                <li class="footer-list_-item">
+                    <a class="email " href="mailto:daniel.popchenko@gmail.com ">Email: daniel.popchenko@gmail.com</a>
+                </li>
+                <li class="footer-list-item adress ">Adress: Kurzemes prospekts, 87-17</li>
+            </ul>
+    </footer>
 </body>
 
 </html>
