added new styles

--- a/main.html
+++ b/main.html
@@ -28,16 +28,18 @@
         <div class="container">
             <!-- Header -->
 
-            <div class="header-content">
+            <nav class="header-nav">
                 <a href="./main.html" class="logo"></a>
-                <a href="#footer " class="header-button ">Contacts</a>
-            </div>
+                <div class="header-nav_links">
+                    <a href="./main.html" class="header-nav_link">Works</a>
+                    <a href="#footer " class="header-nav_button ">Contacts</a>
+                </div>
+            </nav>
 
     </header>
-    </div>
 
     <main>
-        <section class="services ">
+        <section class="services" id="adviced_services">
             <div class="container ">
                 <ul class="services-list ">
                     <li class="services-list_item ">
