--- a/services-pages/first.html
+++ b/services-pages/first.html
@@ -31,11 +31,14 @@
         <div class="container">
             <!-- Header -->
 
-            <div class="header-content">
+            <nav class="header-nav">
                 <a href="../main.html" class="logo"></a>
-                <a href="../main.html" class="header-button ">Contacts</a>
-            </div>
-        </div>
+                <div class="header-nav_links">
+                    <a href="../main.html" class="header-nav_link">Works</a>
+                    <a href="#footer " class="header-nav_button ">Contacts</a>
+                </div>
+            </nav>
+
     </header>
 
 
@@ -51,9 +54,6 @@
 
     <section class="services">
         <div class="container">
-
-
-
             <ul class="services-list images-list">
                 <li class="services-list_item no-hover">
                     <img src="../images/image.jpeg" class="list-item_image " alt="desert">
@@ -86,7 +86,7 @@
         <div class="container">
             <div class="controls">
                 <div class="control">
-                    <a class="prev disable">Previous</a>
+                    <a class="prev control disable">Previous</a>
                 </div>
                 <div class="control">
                     <a href='../services-pages/second.html' class="next control ">Next</a>
