--- a/services-pages/fourth.html
+++ b/services-pages/fourth.html
@@ -27,25 +27,21 @@
 
 <body>
 
+
+
     <header class="header" id="header">
         <div class="container">
             <!-- Header -->
 
-            <div class="header-content">
+            <nav class="header-nav">
                 <a href="../main.html" class="logo"></a>
-                <a href="../main.html" class="header-button ">Contacts</a>
-            </div>
-        </div>
-    </header>
+                <div class="header-nav_links">
+                    <a href="../main.html" class="header-nav_link">Works</a>
+                    <a href="#footer " class="header-nav_button ">Contacts</a>
+                </div>
+            </nav>
 
-    <section class="description">
-        <div class="container description-container">
-            <h2 class="description-title">Service - 4</h2>
-            <p class="description-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis.
-            </p>
-        </div>
-    </section>
+    </header>
 
 
 
