--- a/services-pages/second.html
+++ b/services-pages/second.html
@@ -31,11 +31,14 @@
         <div class="container">
             <!-- Header -->
 
-            <div class="header-content">
+            <nav class="header-nav">
                 <a href="../main.html" class="logo"></a>
-                <a href="../main.html" class="header-button ">Contacts</a>
-            </div>
-        </div>
+                <div class="header-nav_links">
+                    <a href="../main.html" class="header-nav_link">Works</a>
+                    <a href="#footer " class="header-nav_button ">Contacts</a>
+                </div>
+            </nav>
+
     </header>
 
 
