--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <base href="/">
     <!-- Reset css styles -->
     <link rel="stylesheet" href="./utils/reset.css" />
 
@@ -32,7 +33,7 @@
                 <a href="./main.html" class="logo"></a>
                 <div class="header-nav_links">
                     <a href="./main.html" class="header-nav_link">Works</a>
-                    <a href="#footer " class="header-nav_button ">Contacts</a>
+                    <a class="header-nav_button ">Contacts</a>
                 </div>
             </nav>
 
@@ -46,7 +47,7 @@
                         <div class="list-item_content ">
                             <h2 class="list-item_title ">First service</h2>
                             <a href="./services-pages/first.html " class="list-item_link ">
-                                <img src="./images/image.jpeg " class="list-item_image " alt=" ">
+                                <img src="./images/image.jpeg" class="list-item_image " alt=" ">
                             </a>
                         </div>
                     </li>
@@ -115,13 +116,13 @@
         </section>
     </main>
 
-    <footer class="footer" id="footer">
-        <div class="container ">
+    <footer class="footer" id="footer-id">
+        <div class=" container ">
             <ul class="footer-list ">
-                <li class="footer-list-item">
+                <li class="footer-list-item ">
                     <a class="telephone " href="tel:+37127782772 ">Tel: +37127782772</a>
                 </li>
-                <li class="footer-list_-item">
+                <li class="footer-list_-item ">
                     <a class="email " href="mailto:daniel.popchenko@gmail.com ">Email: daniel.popchenko@gmail.com</a>
                 </li>
                 <li class="footer-list-item adress ">Adress: Kurzemes prospekts, 87-17</li>
